ensure spacing when no description is present

--- a/packages/commonwealth/client/scripts/views/components/component_kit/new_designs/CWRelatedCommunityCard/CWRelatedCommunityCard.scss
+++ b/packages/commonwealth/client/scripts/views/components/component_kit/new_designs/CWRelatedCommunityCard/CWRelatedCommunityCard.scss
@@ -26,6 +26,7 @@
       justify-content: space-between;
 
       .community-info {
+        width: 100%;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
